src/assets/style/_typography.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
// @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;500&display=swap');


body {
  font-family: var(--font-family);
  font-size: var(--font-size);
  font-weight: 400;
}

p, .youtube-embed {
	margin-bottom: var(--space-text);
}

a:not(.button) {
	color: var(--link-color);
 	transition: opacity .2s;
}

h1, h2, h3, h4, h5 {
  transition: color .6s;
  color: var(--title-color);
  margin: 2.75rem 0 1rem;
  line-height: 1.15;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 300;

  word-break: break-word;

  &:first-child { margin-top: 0 }
}


h1 {
  margin-top: 0;
  font-size: 2.5rem;
  font-weight: 700;

  @media screen and (max-width: 720px) {
    font-size: 2rem;
  }
}

h2 {font-size: 1.7rem;}

h3 {font-size: 1.4rem;}

h4 {font-size: 1.2rem;}

h5 {font-size: 1.1rem;}

small {font-size: 0.800rem;}

strong {
  font-weight: 500;
}

blockquote {
  border-left: 4px solid var(--border-color);
  padding-left: calc(var(--space) / 2);
  color: var(--title-color);
  font-size: 1.1rem;
}

em {
  font-style: italic;
}

ul { 
  list-style-type: disc; 
  margin-left: var(--space-text);
  margin-bottom: var(--space-text);
  li {
    margin-bottom: .6rem;
  }
}
ol { 
  list-style-type: decimal; 
  margin-left: var(--space-text);
  margin-bottom: var(--space-text);
  li {
    margin-bottom: .6rem;
  }
}



p, ul, ol, li, blockquote {
  &:last-child { margin-top: 0 }
}

section{
  margin: var(--space) 0;
}

details {
  summary {
    cursor: pointer;
    padding: calc(var(--space-text)/2);
    border: 1px dashed var(--border-color);
    background-color: var(--border-color-light);
    font-weight: 700;
    margin-bottom: var(--space-text);
  }

  margin-bottom: var(--space-text);
}

